PSP/borradores/ae/jwt/REST-AdrianSaavedra/src/main/java/org/example/restadriansaavedra/common/errors/MouseValidatorException.java
package org.example.restadriansaavedra.common.errors;

public class MouseValidatorException extends RuntimeException {
    public MouseValidatorException(String message) {
        super(message);
    }
}
